--- a/LGrotte/war/LGrotte.css
+++ b/LGrotte/war/LGrotte.css
@@ -57,6 +57,12 @@ li a:hover {
 	margin: 10px auto;
 	background-color: #e2e2e2;
 	border: 2px solid black;
+	height: auto;
+}
+
+#Headline{
+	height: 150px;
+	
 }
 
 #Navi {
@@ -65,6 +71,7 @@ li a:hover {
 	padding: 20px;
 	background-color: #ffffff;
 	border: 2px solid black;
+	height: 100px;
 }
 
 #Inhalt {
@@ -72,34 +79,51 @@ li a:hover {
 	background-color: #FFF;
 	padding: 20px;
 	min-height: 600px;
+	min-width: 550px;
 	border: 2px solid black;
 	margin-rigth: 300px;
 }
 
 #Inhalt_oben {
 	border: 2px solid black;
+	padding: 20px;
+	min-heigt: 300px;
+	min-width: 255;
 }
 
 #Inhalt_unten {
 	border: 2px solid black;
+	padding: 20px;
+	min-height: 300px;
+	min-width: 255;
 }
 
 #Einstellungen {
 	border: 2px solid black;
 	width: 250px;
+	min-height: 400px;
 }
 
 #Einsellungen_oben {
 	border: 2px solid black;
+	min-height: 200px;
+	width: 210px;
 }
 
 #Einsellungen_unten {
 	border: 2px solid black;
+	min-height: 200px;
+	width: 210px;
 }
 
 #Fuﬂzeile {
 	padding: 20px;
 	clear: both;
-	border-top: 5px solid #FFFFFF;
+	border-top: 5px solid black;
 	border: 2px solid black;
+	min-height: 120px;
+	min-width: 860px;
+	width: auto;
+	background-color: #FFF;
+	padding: 20px;
 }
