--- a/LGrotte/war/LGrotte.css
+++ b/LGrotte/war/LGrotte.css
@@ -54,9 +54,13 @@ li a:hover {
 #Container {
 	max-width: 1200px;
 	min-width: 960px;
-	margin: 10px auto;
+	margin-top: 0px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 10px auto;
 	padding: 10 px;
-	background-color: #b61414;
+/* 	background-color: #b61414;*/	
+	background-image:  radial-gradient(circle farthest-corner at 350px 400px, #b61414, #eb4949);
 	border: 1px solid #c0c0c0;
 	height: auto;
 }
@@ -68,16 +72,102 @@ li a:hover {
 	padding-bottom: 0 auto;
 }
 
+.logout-button {
+	background-color: #FFF;
+	color: #000000;
+	float: right;
+	font-size: 15px;
+	margin-left: 0 auto;
+	margin-right: 0 auto;
+	padding: 5px 15px 5px 15px;
+	text-decoration: none;
+	outline-color: #000000;
+	cursor: pointer;
+	cursor: hand;
+	border: 1px solid #c0c0c0;
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+}
+
+.logout-button:hover {
+	background-color: #e72525;
+	color: #FFF;
+	font-size: 15px;
+	padding: 5px 15px 5px 15px;
+	text-decoration: none;
+	outline-color: #000000;
+	margin: 15px;
+	cursor: pointer;
+	cursor: hand;
+	border: 1px solid #c0c0c0;
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+}
+
+.logout-ja{
+	background-color: #FFF;
+	color: #000000;
+	font-size: 15px;
+	margin-left: 25px;
+	margin-right: 25px;
+	margin-top: 10px;
+	margin-bottom: 5px;
+	width: 70px;
+	height: 40px;
+	padding: 5px 15px 5px 15px;
+	text-decoration: none;
+	outline-color: #000000;
+	cursor: pointer;
+	cursor: hand;
+	border: 1px solid #c0c0c0;
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+}
+
+.logout-ja:hover{
+	background-color: #ff5151;
+}
+
+.logout-nein{
+	background-color: #FFF;
+	color: #000000;
+	font-size: 15px;
+	width: 70px;
+	height: 40px;
+	margin-top: 10px;
+	margin-left: 25px;;
+	margin-right: 25px;
+	margin-bottom: 5px;
+	padding: 5px 15px 5px 15px;
+	text-decoration: none;
+	outline-color: #000000;
+	cursor: pointer;
+	cursor: hand;
+	border: 1px solid #c0c0c0;
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+}
+
+.logout-nein:hover{
+	background-color: #00c431;
+}
+
 #Navi {
 	width: auto;
 	min-width: 880px;
 	padding: 7px;
-	background-color: #b61414;
+	background-color: #971111;
 	/* 	border: 2px solid black;*/
 	min-height: 30 px;
 	height: 0 auto;
 	border-top: 1px solid #c0c0c0;
 	border-bottom: 1px solid #c0c0c0;
+}
+
+#Logout{
+	float: right;
+	height: auto;
+	width: auto;
 }
 
 .navi-button {
