--- a/LGrotte/war/LGrotte.css
+++ b/LGrotte/war/LGrotte.css
@@ -72,6 +72,33 @@ li a:hover {
 	padding-bottom: 0 auto;
 }
 
+.login-label{
+	text-algin: center;
+	font-size: 20px;
+}
+
+.login-button{
+	background-color: #FFF;
+	color: #000000;
+	font-size: 20px;
+	margin-left: auto;
+	margin-right: auto;
+	padding: 5px 15px 5px 15px;
+	text-decoration: none;
+	outline-color: #000000;
+	cursor: pointer;
+	cursor: hand;
+	border: 1px solid #c0c0c0;
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+}
+
+.login-panel{
+	margin-left: 0 auto;
+	margin-right: 0 auto;
+	position: absolute;
+}
+
 .logout-button {
 	background-color: #FFF;
 	color: #000000;
