--- a/LGrotte/war/LGrotte.css
+++ b/LGrotte/war/LGrotte.css
@@ -179,22 +179,20 @@ li a:hover {
 	background-color: #00c431;
 }
 
-#Navi {
+#Navi{
 	width: auto;
 	min-width: 880px;
-	padding: 7px;
+	padding: 6px;
 	background-color: #971111;
-	/* 	border: 2px solid black;*/
-	min-height: 30 px;
+	min-height: 35px;
+	clear: both;
 	height: 0 auto;
 	border-top: 1px solid #c0c0c0;
 	border-bottom: 1px solid #c0c0c0;
 }
 
-#Logout{
+.navi-panel{
 	float: right;
-	height: auto;
-	width: auto;
 }
 
 .navi-button {
