Eigenschaften laden jetzt automatisch ausser update

--- a/LGrotte/war/LGrotte.css
+++ b/LGrotte/war/LGrotte.css
@@ -203,7 +203,7 @@ li a:hover {
 	width: 70px;
 	height: 40px;
 	margin-top: 10px;
-	margin-left: 25px;;
+	margin-left: 25px;
 	margin-right: 25px;
 	margin-bottom: 5px;
 	padding: 5px 15px 5px 15px;
