Append(report.getMatch)... und CSS angefangen

--- a/LGrotte/war/LGrotte.css
+++ b/LGrotte/war/LGrotte.css
@@ -65,6 +65,23 @@ li a:hover {
 	height: auto;
 }
 
+.Report-Container {
+	background-color: red;
+}
+
+.Report-Aehnilichkeit{
+	
+}
+
+.Report-Attribute{
+	
+}
+
+.Report-Eigenschaften{
+	
+	
+}
+
 #Headline {
 	min-height: 50px;
 	height: auto;
