Report.html Elemente hinzugefügt

--- a/LGrotte/war/LGrotte.css
+++ b/LGrotte/war/LGrotte.css
@@ -65,6 +65,16 @@ li a:hover {
 	height: auto;
 }
 
+#Body-left{
+	margin-left: 20px;
+	
+}
+
+#Body-right{
+	margin-right: 20px;
+	margin-left: 800px;
+}
+
 .Report-Container {
 	background-color: #ce1717;
 	height: 120px;
