--- a/LGrotte/war/LGrotte.css
+++ b/LGrotte/war/LGrotte.css
@@ -69,10 +69,10 @@ li a:hover {
 	max-width: 1200px;
 	min-width: 960px;
 	margin-top: 0px;
-	margin-left: 40px;;
-	margin-right: 40px;;
+	margin-left: auto;
+	margin-right: auto;
 	margin-bottom: 10px auto;
-	padding: 10px;
+	padding: 10 px;
 /* 	background-color: #b61414;*/	
 	background-image:  radial-gradient(circle farthest-corner at 350px 400px, #b61414, #eb4949);
 	border: 1px solid #c0c0c0;
