--- a/LGrotte/war/LGrotte.css
+++ b/LGrotte/war/LGrotte.css
@@ -65,95 +65,6 @@ li a:hover {
 	height: auto;
 }
 
-#Container_Report{
-	max-width: 1200px;
-	min-width: 960px;
-	margin-top: 0px;
-	margin-left: 40px;;
-	margin-right: 40px;;
-	margin-bottom: 10px auto;
-	padding: 10px;
-/* 	background-color: #b61414;*/	
-	background-image:  radial-gradient(circle farthest-corner at 350px 400px, #b61414, #eb4949);
-	border: 1px solid #c0c0c0;
-	height: auto;
-}
-
-#Body-left{
-	float: left;
-	border: 1px solid #000000;
-	width: 800px;
-	margin-top: 0px;
-	margin-left: 40px;
-	margin-right: auto;
-	margin-bottom: 10px auto;
-	
-}
-
-#Body-right{
-	float: right;
-	border: 1px solid #000000;
-	width: 380px;
-	margin-top: 0px;
-	margin-right: 100px;
-	margin-bottom: 10px auto;
-}
-
-.Report-Container {
-	background-color: #ce1717;
-	height: 120px;
-	max-widht: 700px;
-	color: #fff;
-}
-
-.Report-Aehnlichkeit{
-	float: left;
-	height: 80px;
-	width: 80px;
-	border-radius: 50%;
-	-moz-border-radius: 50%;
-	border: 1px solid #fff;
-	background-color: #f18585;
- 	margin-bottom: 25px;
-	margin-top: 20px;
-	margin-left:40px;
-}
-
-.Report-Aehnlichkeit-Font{
-	font-size: 24px;
-	float: left;
-	height: 60px;
-	width: 60px;
-	margin-top: 20px;
-	margin-left:15px;
-	
-}
-
-.Report-Attribut{
-	margin-top: 25px;
-	margin-bottom: 10px;
-	margin-right: 40%;
-	margin-left: 15%;	
-/* 	background-color: #971111;
- */	
-}
-
-.Report-Eigenschaft{
-	margin-top: 25px;
-	margin: 10px;
-	margin-right: 20%;
-	border-left: 1px solid black;
-	width: 30%;
-/* 	background-color: #971111;
- */	float: right;
-}
-
-#Headline {
-	min-height: 50px;
-	height: auto;
-	padding-top: 0 auto;
-	padding-bottom: 0 auto;
-}
 
 .findLove-Table{
 
@@ -303,16 +214,43 @@ li a:hover {
 	background-color: #00c431;
 }
 
-#Navi{
+#Navi_Conatiner{
 	width: auto;
-	min-width: 880px;
-	padding: 6px;
+	height: 160px;
+	margin-top: 30px;
+	margin-bottom: 10px;
+	border: 1px solid transparent;
+}
+
+#Logo{
+	float: left;
+	height: 160px;
+	width: 200px;
+	margin-left: 60px;
+ 	
+}
+
+.logo_grotte{
+	display: block;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	margin-left: auto;
+	margin-right: auto;
+	/* float: right; */
+}
+
+#Navi{
+	min-width: 650px;
+	width: auto;
+	padding: 6px; 
+	margin-left: 320px;
 	background-color: #971111;
-	min-height: 35px;
-	clear: both;
-	height: 0 auto;
-	border-top: 1px solid #c0c0c0;
-	border-bottom: 1px solid #c0c0c0;
+	margin-bottom: 56px;
+	margin-top: 56px;
+	height: 36px;
+	border-top: 1px solid #ffffff;
+	border-bottom: 1px solid #ffffff;
+	border-left: 1px solid #ffffff;
 }
 
 .navi-panel{
@@ -449,15 +387,6 @@ li a:hover {
 	min-width: 860px;
 	width: auto;
 	background-color: #FFF;
-}
-
-.logo_grotte{
-	display: block;
-	margin-top: 10px;
-	margin-bottom: 10px;
-	margin-left: auto;
-	margin-right: auto;
-	/* float: right; */
 }
 
 .bild_links {
