--- a/LGrotte/war/Report.css
+++ b/LGrotte/war/Report.css
@@ -69,8 +69,8 @@ li a:hover {
 	max-width: 1200px;
 	min-width: 960px;
 	margin-top: 0px;
-	margin-left: 40px;;
-	margin-right: 40px;;
+	margin-left: 40px;
+	margin-right: 40px;
 	margin-bottom: 10px auto;
 	padding: 10px;
 /* 	background-color: #b61414;*/	
