--- a/LGrotte/war/Report.css
+++ b/LGrotte/war/Report.css
@@ -51,7 +51,7 @@ li a:hover {
 	background-color: #4CAF50;
 }
 
-#Container {
+#Container_Report{
 	max-width: 1200px;
 	min-width: 960px;
 	margin-top: 0px;
@@ -65,58 +65,53 @@ li a:hover {
 	height: auto;
 }
 
-#Container_Report{
-	max-width: 1200px;
-	min-width: 960px;
-	margin-top: 0px;
-	margin-left: 40px;
-	margin-right: 40px;
-	margin-bottom: 10px auto;
-	padding: 10px;
-/* 	background-color: #b61414;*/	
-	background-image:  radial-gradient(circle farthest-corner at 350px 400px, #b61414, #eb4949);
-	border: 1px solid #c0c0c0;
-	height: auto;
-}
-
 #Body-left{
 	float: left;
-	border: 1px solid #000000;
-	width: 800px;
-	margin-top: 0px;
-	margin-left: 40px;
-	margin-right: auto;
-	margin-bottom: 10px auto;
+	position: relative;
+	background-color: #FFF;
+	padding: 20px 0px 20px 20px;
+	min-height: 600px;
+	width: 60%;
+	border-rigth: 1px solid #808080;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
 	
 }
 
 #Body-right{
+	background-color: #FFF;
 	float: right;
-	border: 1px solid #000000;
-	width: 380px;
-	margin-top: 0px;
-	margin-right: 100px;
-	margin-bottom: 10px auto;
+	padding: 20px 20px 20px 0px;
+	height: auto;
+	min-height: 600px;
+	float: right;
+	width: 30%;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
 }
 
 .Report-Container {
 	background-color: #ce1717;
-	height: 120px;
-	max-widht: 700px;
+	min-height: 120px;
+	height: auto;
+	min-width: 600px;
+	width: auto;
 	color: #fff;
+	border-radius: 5px;
 }
 
 .Report-Aehnlichkeit{
 	float: left;
 	height: 80px;
-	width: 80px;
 	border-radius: 50%;
 	-moz-border-radius: 50%;
 	border: 1px solid #fff;
 	background-color: #f18585;
  	margin-bottom: 25px;
 	margin-top: 20px;
-	margin-left:40px;
+	margin-left:10px;
 }
 
 .Report-Aehnlichkeit-Font{
@@ -130,29 +125,18 @@ li a:hover {
 }
 
 .Report-Attribut{
+	width: 180px;
 	margin-top: 25px;
-	margin-bottom: 10px;
-	margin-right: 40%;
-	margin-left: 15%;	
-/* 	background-color: #971111;
- */	
+	margin-bottom: 10%;
+	margin-left: 20%;
+
 }
 
 .Report-Eigenschaft{
+	float: right;
+	width: 30%;
 	margin-top: 25px;
 	margin: 10px;
-	margin-right: 20%;
-	border-left: 1px solid black;
-	width: 30%;
-/* 	background-color: #971111;
- */	float: right;
-}
-
-#Headline {
-	min-height: 50px;
-	height: auto;
-	padding-top: 0 auto;
-	padding-bottom: 0 auto;
 }
 
 .findLove-Table{
@@ -304,15 +288,33 @@ li a:hover {
 }
 
 #Navi{
+	min-width: 650px;
 	width: auto;
-	min-width: 880px;
-	padding: 6px;
+	padding: 6px; 
+	margin-left: 320px;
 	background-color: #971111;
-	min-height: 35px;
-	clear: both;
-	height: 0 auto;
-	border-top: 1px solid #c0c0c0;
-	border-bottom: 1px solid #c0c0c0;
+	margin-bottom: 56px;
+	margin-top: 56px;
+	height: 36px;
+	border-top: 1px solid #ffffff;
+	border-bottom: 1px solid #ffffff;
+	border-left: 1px solid #ffffff;
+}
+
+#Navi_Container{
+	width: auto;
+	height: 160px;
+	margin-top: 30px;
+	margin-bottom: 4px;
+	border: 1px solid transparent;
+}
+
+#Logo{
+	float: left;
+	height: 160px;
+	width: 200px;
+	margin-left: 60px;
+ 	
 }
 
 .navi-panel{
@@ -367,10 +369,23 @@ li a:hover {
 	margin-right: 15px;
 }
 
-#Content {
+#Content{
+	background-color: #FFF;
+	margin: 5px;
+	height: auto;
+	min-height: 250px;
+	border: 1px solid white;
+	overflow: hidden;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+}
+
+#Content_Container{
 	Padding: 3%;
 	heigth: auto;
 	overflow: hidden;
+	border-top: 1px solid white;
 }
 
 #Spalte_links {
@@ -389,12 +404,24 @@ li a:hover {
 	background-color: #FFF;
 	padding: 20px 0px 20px 20px;
 	min-height: 600px;
-	/* 	margin-rigth: 300px; */
 	width: 47%;
 	border-rigth: 1px solid #808080;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
-	border-radius: 25px;
+	border-radius: 5px;
+}
+
+#Zusatz {
+	background-color: #FFF;
+	float: right;
+	padding: 20px 20px 20px 0px;
+	height: auto;
+	min-height: 600px;
+	float: right;
+	width: 47%;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
 }
 
 #Inhalt_oben {
