--- a/LGrotte/war/LGrotte.css
+++ b/LGrotte/war/LGrotte.css
@@ -18,25 +18,21 @@ h1 {
 h2 {
 	color: #c0c0c0;
 	margin-bottom: 10px;
-	padding-bottom: 4px;
-	badding-left: 2px;
+	padding-bottom: 3px;
+	padding-left: 7px;
 	border-bottom-width: 1px;
 	border-top-width: 0px;
-	border-rigth-width: 0px;
+	border-right-width: 0px;
 	border-style: solid;
-/* 	 -webkit-border-image: -webkit-gradient(linear, left top, left bottom, from(#00abeb), to(#fff), color-stop(0.5, #fff), color-stop(0.5, #66cc00)) 21 30 30 21 repeat repeat; 
-     -webkit-border-image: -webkit-linear-gradient(90deg, #c0c0c0 0%, #fff 50%); 
-	 -moz-border-image: -moz-linear-gradient(90deg, #c0c0c0 0%, #fff 50%); 
-	 -o-border-image: -o-linear-gradient(90deg, #c0c0c0 0%, #fff 50%); 
-	 border-image: linear-gradient(90deg, #c0c0c0 0%, #fff 50%); */
+
 }
 
 a {
 	text-decoration: none;
 	color: black;
 	display: block;
-	padding: 8px;
-}
+/* 	padding: 8px;
+ */}
 
 ul {
 	list-style-type: none;
@@ -73,11 +69,13 @@ li a:hover {
 	margin-top: 0px;
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom: 10px auto;
+	margin-bottom: 20px;
 	padding: 10 px;
-/* 	background-color: #b61414;*/	
 	background-image:  radial-gradient(circle farthest-corner at 350px 400px, #b61414, #eb4949);
-	border: 1px solid #c0c0c0;
+	border: 1px solid #9f9f9f;
+	-webkit-box-shadow: 0px 10px 10px 7px rgba(215,215,215,0.85);
+	-moz-box-shadow: 0px 10px 10px 7px rgba(215,215,215,0.85);
+	box-shadow: 0px 10px 10px 7px rgba(215,215,215,0.85);
 	height: auto;
 }
 
@@ -261,8 +259,26 @@ li a:hover {
 	padding: 6px; 
 	margin-left: 320px;
 	background-color: #971111;
-	margin-bottom: 56px;
 	margin-top: 56px;
+	height: 36px;
+	border-top: 1px solid #ffffff;
+	border-bottom: 1px solid #ffffff;
+	border-left: 1px solid #ffffff;
+}
+#Navi-Pop{
+	height: 53px;
+	width: inhert;
+	min-width: 130px;
+	max-width: 880px;
+	float: right;
+}
+
+.Navi-Pop-Panel{
+	min-width: 650px;
+	width: auto;
+	padding: 6px; 
+	background-color: #d31818;
+	margin-top: 5px;
 	height: 36px;
 	border-top: 1px solid #ffffff;
 	border-bottom: 1px solid #ffffff;
@@ -279,6 +295,7 @@ li a:hover {
 	font-size: 15px;
 	padding: 5px 15px 5px 15px;
 	text-decoration: none;
+	width: auto;
 	outline-color: #000000;
 	margin-left: 15px;
 	margin-right: 15px;
@@ -290,6 +307,10 @@ li a:hover {
 	border: 0px solid #c7c7c7;
 	border-radius: 3px;
 	-moz-border-radius: 3px;
+}
+
+.navi-button-big{
+	width: 150px;
 }
 
 .navi-button:hover {
@@ -333,24 +354,22 @@ li a:hover {
 	border-radius: 5px;
 }
 
-.gwt-Button{
-	background: none;
-	color: #000000;
-	font-size: 15px;
-	padding: 5px 15px 5px 15px;
-	text-decoration: none;
-	outline-color: #000000;
-	margin-left: 15px;
-	margin-right: 15px;
-	cursor: pointer;
-	cursor: hand;
-	-webkit-box-shadow: inset 0px 0px 5px 3px rgba(215,215,215,0.85);
-	-moz-box-shadow: inset 0px 0px 5px 3px rgba(215,215,215,0.85);
-	box-shadow: inset 0px 0px 5px 3px rgba(215,215,215,0.85);
-	border: 0px solid #c7c7c7;
-	border-radius: 3px;
-	-moz-border-radius: 3px;
+.gwt-Label{
+	
 }
+
+.gwt-TextBox{
+	
+}
+
+.gwt-FlexTable{
+	
+}
+
+.gwt-ListBox{
+	
+}
+
 
 .grotte-Button {
 	background-color: #FFF;
@@ -362,9 +381,9 @@ li a:hover {
 	margin-right: 15px;
 	cursor: pointer;
 	cursor: hand;
-	-webkit-box-shadow: inset 0px 0px 5px 3px rgba(215,215,215,0.85);
-	-moz-box-shadow: inset 0px 0px 5px 3px rgba(215,215,215,0.85);
-	box-shadow: inset 0px 0px 5px 3px rgba(215,215,215,0.85);
+	-webkit-box-shadow: inset 0px 0px 5px 3px rgba(225,225,225,0.85);
+	-moz-box-shadow: inset 0px 0px 5px 3px rgba(225,225,225,0.85);
+	box-shadow: inset 0px 0px 5px 3px rgba(225,225,225,0.85);
 	border: 0px solid #c7c7c7;
 	border-radius: 3px;
 	-moz-border-radius: 3px;
@@ -395,7 +414,7 @@ li a:hover {
 #Zusatz {
 	background-color: #FFF;
 	float: right;
-	padding: 20px 20px 20px 0px;
+	padding: 64px 20px 20px 0px;
 	height: auto;
 	min-height: 600px;
 	float: right;
@@ -406,11 +425,10 @@ li a:hover {
 }
 
 #Fusszeile {
-	padding: 20px;
 	margin-top: 20px;
 	clear: both;
 	border-top: 1px solid black;
-	min-height: 120px;
+	min-height: 115px;
 	min-width: 860px;
 	width: auto;
 	background-color: #FFF;
@@ -419,11 +437,11 @@ li a:hover {
 .bild_links {
 	margin-left: 20px;
 	float: left;
-	vertical-align: middle;
+	margin-top:10px;
 }
 
 .bild_rechts {
-	margin-right: 20px;
+	margin-right: 35px;
+	margin-top: 40px;
 	float: right;
-	vertical-align: middle;
 }
